file-trash-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: file-trash-service-deployment
  labels:
    app: file-trash-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-trash-service
  template:
    metadata:
      labels:
        app: file-trash-service
    spec:
      containers:
      - name: file-trash-service
        image: registry.cloud.sdu.dk/sdu-cloud/file-trash-service:1.3.7
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation

      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: file-trash-refresh-token
      - name: token-validation
        configMap:
          name: token-validation

      imagePullSecrets:
        - name: esci-docker
