file-trash-service/k8/service.yml

---
apiVersion: v1
kind: Service
metadata:
  name: file-trash
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: file_trash
      prefix: ^/api/files/trash(/.*)?$
      prefix_regex: true
      service: file-trash:8080
      rewrite: ""

spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: file-trash-service
