file-trash-service/k8/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: file-trash-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
  - host: cloud.sdu.dk
    http:
      paths:
      - path: /api/files/trash
        backend:
          serviceName: file-trash
          servicePort: 8080
